cluster-examples/cilium-cluster/monitoring/netdata/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netdata-ui
  namespace: monitoring
spec:
  parentRefs:
  - name: cilium
    namespace: kube-system
  hostnames:
  - 'monitoring.h3m.local'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: netdata
      kind: Service
      port: 19999
      namespace: monitoring
